<resources>
    <string name="app_name">Pop Movies</string>
    <string name="app_detail_name">Movie Detail</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>

    <string name="no_reviews_message">No reviews for this movie</string>

    <!-- Movie Detail Label -->
    <string name="label_movie_detail_title">Title: </string>
    <string name="label_movie_detail_release_date">Release Date: </string>
    <string name="label_movie_detail_overview">Synopsis: </string>
    <string name="label_movie_detail_vote_average">User Rating: </string>

    <string name="label_movie_menu_favorite_movies">Favorite Movies</string>
    <string name="label_movie_menu_most_popular">Most Popular</string>
    <string name="label_movie_menu_top_rated">Top Rated</string>

    <string name="label_movie_detail_review">Reviews: </string>
    <string name="label_movie_detail_trailer">Trailers: </string>

    <string name="title_favorite_movie_menu">Favorite</string>
    <string name="checkbox_favorite_movie_label">Favorite</string>

</resources>
