<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollViewParent"
    tools:context=".detail.MovieDetailActivity">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Put this layout here to set the text view component -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/movie_detail_border_color">

            <!-- Text to show the Movie title -->
            <TextView
                android:id="@+id/textview_movie_original_title_detail"
                style="@style/text_label_movie_title"
                android:background="@color/color_green"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="26dp"
                android:paddingRight="18dp"
                android:layout_height="122dp" />

        </LinearLayout>

        <!-- Layout to hold the movie information components -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="1dp">

            <!-- Layout that holds movie image, release date and user rating -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <!-- Movie image -->
                <ImageView
                    android:id="@+id/image_movie_picture_detail"
                    android:layout_width="130dp"
                    android:layout_height="142dp" />

                <!-- Layout to set the position of the movie information -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/cb_favorite_movie"
                        style="@style/text_movie_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/favorite_movie"
                        android:onClick="onCheckboxClicked"
                        android:paddingLeft="7dp"
                        android:text="@string/checkbox_favorite_movie_label" />

                    <!-- Layout to position the label and the information side by side -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_movie_release_date_detail_label"
                            style="@style/text_movie_detail"
                            android:layout_width="105dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end"
                            android:text="@string/label_movie_detail_release_date"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/textview_movie_release_date_detail"
                            style="@style/text_movie_detail"
                            android:layout_width="115dp"
                            android:layout_height="20dp"
                            android:paddingLeft="5dp" />

                    </LinearLayout>

                    <!-- Layout to position the label and the information side by side -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_movie_vote_average_detail_label"
                            style="@style/text_movie_detail"
                            android:layout_width="105dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end"
                            android:text="@string/label_movie_detail_vote_average"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/textview_movie_vote_average_detail"
                            style="@style/text_movie_detail"
                            android:layout_width="115dp"
                            android:layout_height="20dp"
                            android:paddingLeft="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Layout for showing the synopsis of the movie -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                card_view:contentPadding="7dp"
                card_view:cardCornerRadius="7dp"
                card_view:cardElevation="7dp">

                <LinearLayout
                    android:id="@+id/lnSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <!-- Synopsis text component -->
                    <TextView
                        android:id="@+id/textview_movie_overview_label"
                        style="@style/text_movie_overview"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:layout_height="20dp"
                        android:paddingLeft="2dp"
                        android:text="@string/label_movie_detail_overview" />

                    <!-- Scroll to read all of the information if it doesn't suit on the text view -->
                    <ScrollView
                        android:id="@+id/scrollViewChild"
                        android:layout_width="match_parent"
                        android:layout_height="125dp">

                        <TextView
                            android:id="@+id/textview_movie_overview_detail"
                            style="@style/text_movie_detail"
                            android:layout_width="match_parent"
                            android:layout_height="125dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp" />

                    </ScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#909090" />

        <TextView
            android:id="@+id/textview_movie_trailer_label"
            style="@style/text_movie_overview"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="20dp"
            android:paddingLeft="2dp"
            android:text="@string/label_movie_detail_trailer" />

        <!-- Layout for showing the trailers of the movies -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_movie_trailers"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/pb_loading_trailer_indicator"
                android:layout_height="32dp"
                android:layout_width="32dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#909090"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <TextView
            android:id="@+id/textview_movie_review_label"
            style="@style/text_movie_overview"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="20dp"
            android:paddingLeft="2dp"
            android:text="@string/label_movie_detail_review" />

        <!-- Layout for showing the reviews of the movies -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_movie_reviews"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_no_reviews_message_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/no_reviews_message"
                android:textSize="18sp"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>